5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1793_3124.log
== TEST (2019-05-30 18:57:48) 
-- CODE:
from numpy import 
n=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	   i=i+1
print(round(m,2))		
      
-- ERROR:
File "XXXX", line 1
    from numpy import 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:57:50) 
-- CODE:
from numpy import 
n=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	   i=i+1
print(round(m,2))		
      
-- EXECUTION TIME:
0.179487
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 1
    from numpy import 
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:57:51) 
-- CODE:
from numpy import 
n=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	   i=i+1
print(round(m,2))		
      
-- ERROR:
File "XXXX", line 1
    from numpy import 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:57:58) 
-- CODE:
from numpy import *
n=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	   i=i+1
print(round(m,2))		
      
-- EXECUTION TIME:
0.146473
-- ERROR:
  File "/home/codebench/codes/1793/3124/main.py", line 7
    i=i+1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:57:59) 
-- CODE:
from numpy import *
n=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	   i=i+1
print(round(m,2))		
      
-- ERROR:
File "XXXX", line 7
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:58:05) 
-- CODE:
from numpy import *
n=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))		
      
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:58:07) 
-- CODE:
from numpy import *
n=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))		
      
-- EXECUTION TIME:
0.293188
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:58:07) 
-- CODE:
from numpy import *
n=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))		
      
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:58:08) 
-- CODE:
from numpy import *
n=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))		
      
-- EXECUTION TIME:
0.832934
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 3, in <module>
    n=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:58:26) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))		
      
-- EXECUTION TIME:
0.366937
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:58:26) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))		
      
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:59:32) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))		
      
-- EXECUTION TIME:
0.605024
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:59:38) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))		
      
-- EXECUTION TIME:
0.624473
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:59:38) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))		
      
-- EXECUTION TIME:
1.571
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:59:38) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))		
      
-- EXECUTION TIME:
1.84457
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:59:38) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))		
      
-- EXECUTION TIME:
2.1003
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:59:38) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))		
      
-- EXECUTION TIME:
1.88623
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m+v[i]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:16:50) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(m,2))		
      
-- EXECUTION TIME:
0.414159
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3124/main.py", line 6, in <module>
    m=m*(v[i])
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:16:53) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(m,2))		
      
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:17:45) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(m,2))		
      
-- EXECUTION TIME:
0.406948
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
33864.17
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
1275.52
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
149.74
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:17:46) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(m,2))		
      
-- EXECUTION TIME:
0.488321
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
33864.17
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
1275.52
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
149.74
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:17:47) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(m,2))		
      
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:09) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(m,2))		
      
-- EXECUTION TIME:
0.350438
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
33864.17
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
1275.52
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
149.74
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:18:09) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(m,2))		
      
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:16) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))		
      
-- EXECUTION TIME:
0.491294
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
4.44
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
2.72
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:19) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))		
      
-- EXECUTION TIME:
0.617623
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
4.44
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
digite n numeros:2.72
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:19) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))		
      
-- EXECUTION TIME:
1.24207
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
4.44
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
digite n numeros:3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
digite n numeros:2.72
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:20) 
-- CODE:
from numpy import *
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))		
      
-- EXECUTION TIME:
1.24189
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
4.44
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
digite n numeros:3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
digite n numeros:2.72
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
